View Mvc for heroDetail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">AndroidKotlinSeed</string>
-    <string name="call_failed">We got somme issues when attempting connect. Please, try it later.</string>
     <string name="server_error_dialog_title">Error</string>
     <string name="ok">OK</string>
     <string name="share_image_via">Share image via…</string>
@@ -13,4 +12,5 @@
     <string name="cannot_reach_server">Server cannot be reached</string>
     <string name="server_access_forbidden">Access to server forbidden</string>
     <string name="server_call_failed">We got somme issues while attempting to connect. Please, try it later.</string>
+    <string name="hero_not_bound">Hero detail not received</string>
 </resources>
