Improve permission handling, upgrade deprecated methods and dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="server_access_forbidden">Access to server forbidden</string>
     <string name="server_call_failed">We got somme issues while attempting to connect. Please, try it later.</string>
     <string name="hero_not_bound">Hero detail not received</string>
-    <string name="request_write_storage">Access to write storage required to share image</string>
+    <string name="request_write_storage">Write storage access required to share an image</string>
 </resources>
